YI-244: cta spacing fix

--- a/web/themes/custom/yale_infosec/components/02-molecules/cta/_cta.scss
+++ b/web/themes/custom/yale_infosec/components/02-molecules/cta/_cta.scss
@@ -8,10 +8,6 @@
   &--featured {
     margin-bottom: 0;
   }
-
-  .bg:last-child & {
-    margin-bottom: 0;
-  }
 }
 
 .cta__image {
